--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/express": "^4.17.8",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "pug": "^3.0.0",
     "sequelize": "^6.3.5",
     "sqlite3": "^5.0.0"
   }
